--- a/my_practice/ex_css_1.html
+++ b/my_practice/ex_css_1.html
@@ -2,14 +2,14 @@
 <html>
     <head>
         <style>
-            h1 {color: red}
+            #selected {color: red}
         </style>
     </head>
     <body>
         <h1>
             CSS
         </h1>
-        <h1>
+        <h1 id="selected">
             php
         </h1>
         <h2>
