--- a/practice_1/HW_01/index.html
+++ b/practice_1/HW_01/index.html
@@ -3,6 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>자기소개 페이지</title>
+        <style>
+            li {
+                border: 1px red solid;
+            }
+        </style>
     </head>
     <body>
         <header>
