--- a/my_practice/ex_css_1.html
+++ b/my_practice/ex_css_1.html
@@ -2,7 +2,14 @@
 <html>
     <head>
         <style>
-            #selected {color: red}
+            #selected {
+                color: red;
+                border: red 10px dotted;    
+                padding: 30px;
+                margin: 10px;
+                font-weight: 10px;
+                height: 20px;
+            }
         </style>
     </head>
     <body>
