--- a/HW/HW_01/index_home.html
+++ b/HW/HW_01/index_home.html
@@ -35,15 +35,15 @@
     <body>
         <header>
             <h1><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5c/LG_U%2B_CI.svg/1280px-LG_U%2B_CI.svg.png">
-                <a id ="name" href="http://127.0.0.1:5500/practice_1/HW_01/index.html">LG U+ 유레카 교육생 정하람</a>
+                <a id ="name" href="http://127.0.0.1:5500/HW/HW_01/index.html">LG U+ 유레카 교육생 정하람</a>
             </h1>    
         </header>
         <nav>
             <ol>
-                <li><a href="http://127.0.0.1:5500/practice_1/HW_01/index_age.html">나이</a></li>
-                <li><a href="http://127.0.0.1:5500/practice_1/HW_01/index_email.html">연락처</a></li>
-                <li><a href="http://127.0.0.1:5500/practice_1/HW_01/index_home.html">거주지</a></li>
-                <li><a href="http://127.0.0.1:5500/practice_1/HW_01/index_motivation.html">지원동기</a></li>
+                <li><a href="http://127.0.0.1:5500/HW/HW_01/index_age.html">나이</a></li>
+                <li><a href="http://127.0.0.1:5500/HW/HW_01/index_email.html">연락처</a></li>
+                <li><a href="http://127.0.0.1:5500/HW/HW_01/index_home.html">거주지</a></li>
+                <li><a href="http://127.0.0.1:5500/HW/HW_01/index_motivation.html">지원동기</a></li>
             </ol>
         </nav>
         <article>
