--- a/Ureka_class/html/practice_01/index.html
+++ b/Ureka_class/html/practice_01/index.html
@@ -4,8 +4,14 @@
         <title>
             연습
         </title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+        <style>
+            body {
+              font-family: "Sofia", sans-serif;
+              }
+        </style>
     </head>
+    
 <body>
     <a href="#C4">Jump to chapter 4</a>
     <h1>This is heading 1</h1>
