--- a/Ureka_class/html/practice_01/login.html
+++ b/Ureka_class/html/practice_01/login.html
@@ -4,7 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <style>
+        input[type="text"]{
+            width: 150px;
+            display: black;
+            margin-bottom: 10px;
+            background-color: yellow;
+        }
+        input[type="submit"]{
+            width: 120px;
+            margin-left: 35px;
+            display:black;
+        }
+    </style>
 </head>
+
 <body>
     <form action="loginController" method="post">
         <div>
