--- a/Ureka_class/css/practice_01/index.html
+++ b/Ureka_class/css/practice_01/index.html
@@ -128,13 +128,13 @@
       <p>이메일 주소를 보내시면 구독 안내문과 새로운 소식들을 보내 드립니다.</p>
       <form class="add-email">
         <input type="email" placeholder="이메일 주소" required>
-        <button type="submit">보내기</button>
+        <button id = "submit" type="submit">보내기</button>
       </form>      
     </div>
   </section>  
 
   <!-- 푸터 -->
-  <footer>
+  <footer class="site-footer">
     <div class="footer-content">
       <div class="col left">
         <ul class="footer-nav">
