--- a/HW/2025_09_01/Coffee/index.html
+++ b/HW/2025_09_01/Coffee/index.html
@@ -6,15 +6,26 @@
   <title>원두 정기 구독</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="style.css">
+  <script src="main.js" defer></script>
 </head>
 <body>
-  <!-- 헤더 -->
   <header>
     <nav>
       <h1 class="logo">원두정기구독</h1>
       <div>
         <button class="lang"><i class="fa-solid fa-globe"></i>한국어 <i class="fa-solid fa-caret-down"></i></button>
-        <button id="openModal">로그인</button> 
+        <button id="loginBtn">로그인</button>
+
+        <div class="login-wrapper">
+          <h2>로그인</h2>
+          <form method="post" action="서버의url" id="login-form">
+            <label for="username">아이디</label>
+            <input type="text" id="username" name="username" required>
+            <label for="password">비밀코드</label>
+            <input type="password" id="password" name="password" required>
+            <button type="submit">로그인</button>
+          </form>
+        </div>
       </div>
     </nav>
     <div class="header-content">
@@ -27,25 +38,7 @@
       </form>
     </div>
   </header>
-    <div id="myModal" class="modal">
-      <div class="modal-content">
-        <span class="close">&times;</span>
-        <h2>로그인</h2>
-        <form id="loginForm">
-          <label for="username">아이디</label>
-          <input type="text" id="username" name="username" placeholder="아이디 입력" required>
-          <label for="password">비밀번호</label>
-          <input type="password" id="password" name="password" placeholder="비밀번호 입력" required>
-          
-          <div class="modal-buttons">
-            <button id="submitLogin">로그인</button>
-            <button id="signUpInModal">회원가입</button>
-          </div>
-        </form>
-      </div>
-    </div>
 
-  <!-- 배너 -->
   <section id="banner">
     <div class="banner-content">
       <h3>정성을 다해 로스팅한 커피를 매주 보내드립니다</h3>
@@ -60,7 +53,6 @@
     </select>
   </section>
 
-  <!-- 멤버십 -->
   <section id="membership">
     <h2>회원이 되시면</h2>
     <div class="membership-content">
@@ -70,7 +62,6 @@
     </div>
   </section>  
 
-  <!-- 선택 가이드 -->
   <section id="choice">
     <h2>타입별 선택 가이드</h2>
     <div class="choice-content">
@@ -78,33 +69,32 @@
        <h3>너티드 커피</h3> 
        <p>고소한, 구수한, 산미가 약한 커피</p>   
        <div class="bean-img">
-        <img src="images/beans.png" alt="">
+        <img src="/Users/jeongharam/UREKA/HW/2025_09_01/Coffee/images/beans.png" alt="">
        </div>    
       </div>
       <div class="card">
         <h3>비비드 커피</h3> 
         <p>꽃, 허브, 과일, 산미가 있는 커피</p>
         <div class="bean-img">
-          <img src="images/beans.png" alt="">
+          <img src="/Users/jeongharam/UREKA/HW/2025_09_01/Coffee/images/beans.png" alt="">
          </div>  
       </div>
       <div class="card">
         <h3>다크 커피</h3> 
         <p>쌉쌀한, 달콤한, 산미가 없는 커피</p>
         <div class="bean-img">
-          <img src="images/beans.png" alt="">
+          <img src="/Users/jeongharam/UREKA/HW/2025_09_01/Coffee/images/beans.png" alt="">
          </div>  
       </div>
       <div class="card">
         <h3>로스터가 추천하는 커피</h3>     
         <div class="bean-img">
-          <img src="images/beans.png" alt="">
+          <img src="/Users/jeongharam/UREKA/HW/2025_09_01/Coffee/images/beans.png" alt="">
          </div>  
       </div>
     </div>
   </section>  
 
-  <!-- FAQ -->
   <section id="faq">
     <h2>자주하는 질문과 답변</h2>
     <ul class="accordion">
@@ -145,15 +135,12 @@
       <p>이메일 주소를 보내시면 구독 안내문과 새로운 소식들을 보내 드립니다.</p>
       <form class="add-email">
         <input type="email" placeholder="이메일 주소" required>
-        <button id = "submit" type="submit">보내기</button>
+        <button type="submit">보내기</button>
       </form>      
     </div>
   </section>  
-  
-  <script src="logIn.js"></script>
 
-  <!-- 푸터 -->
-  <footer class="site-footer">
+  <footer>
     <div class="footer-content">
       <div class="col left">
         <ul class="footer-nav">
@@ -169,7 +156,7 @@
           <p>사업자등록번호 : 000-00-00000</p>
         </div>
       </div>
-      <div class="col center">
+      <div class="col-center">
         <h2>고객센터</h2>
         <h3>070-000-0000</h3>
         <p>월-금 09:00-18:00</p>
@@ -179,7 +166,7 @@
           <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
         </ul>
       </div>
-      <div class="col right">
+      <div class="col-right">
         <h2>커뮤니티</h2>
         <p><a href="#">공지사항</a></p>
         <p><a href="#">이벤트</a></p>
